--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Modak&family=Zen+Maru+Gothic:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     
     <title>Document</title>
 </head>
@@ -55,7 +55,7 @@
     </section>
 
     <section class="about">
-        <h1>What is PMS ??</h1>
+        <h4>What is PMS ??</h4>
         <h3>#ABOUT</h3>
         <h2>pmsってなーに？？</h2>
         <p>Premenstrual Syndromeの略称で、月経前症候群と呼ばれるものです。<br>
