--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="top">
+
+    <header>
+        <ul>
+            <li><a href="#top">top</a></li>
+            <li><a href="#poem">message</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#how">how</a></li>
+            <li><a href="#solution">solution</a></li>
+
+        </ul>
+    </header>
+    <section class="top" id="top">
         
         <div class="top-material">
             <div class="top-material-img1">
@@ -26,7 +37,7 @@
         </div>
     </section>
 
-    <section class="poem">
+    <section class="poem" id="poem">
         <div class="poem-img1">
             <img src="images/girl-sad.png" alt="">
 
@@ -56,7 +67,7 @@
 
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="fuwat"> 
         <h1>What is PMS ??</h1>
         <h3>#ABOUT</h3>
@@ -89,7 +100,7 @@
  
     </section>
     
-    <section class="how">
+    <section class="how" id="how">
      <div class="fuwat"> 
 
         <h1>how ??</h1>
@@ -196,7 +207,7 @@
     　　</div>
     </section>
 
-    <section class="solution">
+    <section class="solution" id="solution">
         <h1>solution</h1>
         <h3>#solution</h3>
         <h2>PMSの対処法</h2>
